--- a/Proyecto/plAIIgames/app/templates/app/index.html
+++ b/Proyecto/plAIIgames/app/templates/app/index.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 <body>
+<div>
+    <br>
+    <br>
 <form action="/populateSwitch">
     <input type="submit" value="Populate Switch"/>
 </form>
@@ -9,6 +12,7 @@
 <form action="/listAll">
     <input type="submit" value="All Games"/>
 </form>
+    </div>
 
 </body>
 {% endblock %}
