--- a/Proyecto/plAIIgames/app/templates/app/index.html
+++ b/Proyecto/plAIIgames/app/templates/app/index.html
@@ -5,6 +5,11 @@
 <div>
     <br>
     <br>
+    
+<form action="/cleanBBDD">
+    <input type="submit" value="Clean BBDD"/>
+</form>
+
 <form action="/populateSwitch">
     <input type="submit" value="Populate Switch"/>
 </form>
@@ -14,7 +19,11 @@
 </form>
 
 <form action="/listAll">
-    <input type="submit" value="All Games"/>
+    <input type="submit" value="All games"/>
+</form>
+
+<form action="/showOfferedGames">
+    <input type="submit" value="Show offered games"/>
 </form>
     </div>
 
