--- a/Proyecto/plAIIgames/app/templates/app/editLibrary.html
+++ b/Proyecto/plAIIgames/app/templates/app/editLibrary.html
@@ -12,6 +12,9 @@
     <button type="submit">Submit</button>
   </form>
 
+<form action="/">
+    <input type="submit" value="Index" />
+</form>
 
 </body>
 {% endblock %}
