Corregido el select multiple y añadido el type en los juegos

--- a/Proyecto/plAIIgames/app/templates/app/viewLibrary.html
+++ b/Proyecto/plAIIgames/app/templates/app/viewLibrary.html
@@ -10,7 +10,7 @@
 <ul>
     {% for g in library.games.all %}
 
-     <li>{{g.title}}</li>
+     <li>{{g.title}} ({{g.type}})</li>
     {% endfor %}
 </ul>
 </fieldset>
