--- a/Proyecto/plAIIgames/app/templates/app/removeGame.html
+++ b/Proyecto/plAIIgames/app/templates/app/removeGame.html
@@ -7,11 +7,11 @@
     {% csrf_token %}
     <input type="hidden" value="{{libreria.id}}" id="liberia" name="libreria"/>
     <select multiple id="games" name="games">
-        {% for g in games %}
+        {% for g in juegos %}
         <option value="{{g.id}}">{{g.title}}</option>
         {% endfor %}
     </select>
-    <button type="submit">Submit</button>
+    <button type="submit">Eliminar juegos</button>
 </form>
 
 </body>
