--- a/Proyecto/plAIIgames/app/templates/app/viewLibrary.html
+++ b/Proyecto/plAIIgames/app/templates/app/viewLibrary.html
@@ -16,8 +16,8 @@
 </fieldset>
 <br>
 
-    <a href="/addGame?library={{library.id}}" style=" float:left; margin-right:5px"><button>Add Games</button></a>
-    <a href="/removeGame?library={{library.id}}" style="margin-right:5px"><button>Remove Games</button></a>
+    <a href="/addGame?library={{library.id}}" style=" float:left; margin-right:5px"><button>Añadir juegos a la librería</button></a>
+    <a href="/removeGame?library={{library.id}}" style="margin-right:5px"><button>Eliminar juegos de la librería</button></a>
 
 </body>
 {% endblock %}
