--- a/Proyecto/plAIIgames/app/templates/app/signUp.html
+++ b/Proyecto/plAIIgames/app/templates/app/signUp.html
@@ -9,13 +9,16 @@
 {% block content %}
 
 
-  <h2>Sign up</h2>
+  <h2>Creación de usuario</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign up</button>
+    <button type="submit">Crear usuario</button>
   </form>
 {% endblock %}
-
+	
+	<form action="/">
+    <input type="submit" value="Volver a la página principal" />
+	</form>
 </body>
 </html>
